--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       
       <ul class="menu-vertical" id="example-menu">
         <li id="link1"><a href="http://www.monicanguyen.design">Home</a></li>
-        <li id="link2"><a>Design</a></li>
+        <li id="link2"><a href="http://www.monicanguyen.design#design">Design</a></li>
         <li id="link3"><a>Illustration</a></li>
         <li id="link4"><a>Info</a></li>
       </ul>
