--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <ul class="menu-vertical" id="example-menu">
         <li id="link1"><a href="http://www.monicanguyen.design">Home</a></li>
         <li id="link2"><a href="http://www.monicanguyen.design#design">Design</a></li>
-        <li id="link3"><a>Illustration</a></li>
-        <li id="link4"><a>Info</a></li>
+        <li id="link3"><a href="http://www.monicanguyen.design#illustration">Illustration</a></li>
+        <li id="link4"><a href="http://www.monicanguyen.design#info">Info</a></li>
       </ul>
     </nav>
         
