--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h1 class="title">Bonnaroo</h1>
       <div class="project-arrows">
         <a class="arrows" href="http://www.monicanguyen.design/quote-illustrations"><i class="fa fa-chevron-left"></i></a>
-        <a class="arrows" href="http://www.monicanguyen.design/musical-analysis"><i class="fa fa-chevron-right"></i></a>
+        <a class="arrows" href="http://www.monicanguyen.design/music-analysis"><i class="fa fa-chevron-right"></i></a>
       </div>
     </header>
 
